--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "xlsx": "^0.18.5"
   }
 }
